--- a/exercise4/style.css
+++ b/exercise4/style.css
@@ -14,3 +14,261 @@ body {
   position: relative;
   z-index: 0;
 }
+
+
+
+
+
+.pad {
+	position: absolute;
+	background: white;
+	width: 40%;
+	height: 65%;
+  margin: 100px auto;
+  margin-left: 250px;
+	box-shadow: 10px 10px 5px grey
+  
+}
+
+.stripe1 {
+	position: absolute;
+	background: #d2d0d8;
+	width: 30%;
+	height: 0.2%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 20%;
+	left: 5%;
+}
+
+.stripe2 {
+	position: absolute;
+	background: #d2d0d8;
+	width: 30%;
+	height: 0.2%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 27%;
+	left: 5%;
+}
+
+.stripe3 {
+	position: absolute;
+	background: #d2d0d8;
+	width: 30%;
+	height: 0.2%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 34%;
+	left: 5%;
+}
+
+.stripe4 {
+	position: absolute;
+	background: #d2d0d8;
+	width: 30%;
+	height: 0.2%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 41%;
+	left: 5%;
+}
+
+.stripe5 {
+	position: absolute;
+	background: #d2d0d8;
+	width: 30%;
+	height: 0.2%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 48%;
+	left: 5%;
+}
+
+.stripe6 {
+	position: absolute;
+	background: #d2d0d8;
+	width: 30%;
+	height: 0.2%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 55%;
+	left: 5%;
+}
+
+.hole1 {
+	position: absolute;
+	background: e0daef;
+	width: 3%;
+	height: 4%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 4%;
+	left: 5%;
+}
+
+.hole2 {
+	position: absolute;
+	background: e0daef;
+	width: 3%;
+	height: 4%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 4%;
+	left: 13%;
+}
+
+.hole3 {
+	position: absolute;
+	background: e0daef;
+	width: 3%;
+	height: 4%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 4%;
+	left: 21%;
+}
+
+.hole4 {
+	position: absolute;
+	background: e0daef;
+	width: 3%;
+	height: 4%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 4%;
+	left: 29%;
+}
+
+.hole5 {
+	position: absolute;
+	background: #cccad1;
+	width: 3%;
+	height: 1.4%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 4%;
+	left: 5%;
+}
+
+.hole6 {
+	position: absolute;
+	background: #cccad1;
+	width: 3%;
+	height: 1.4%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 4%;
+	left: 13%;
+}
+
+.hole7 {
+	position: absolute;
+	background: #cccad1;
+	width: 3%;
+	height: 1.4%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 4%;
+	left: 21%;
+}
+
+.hole8 {
+	position: absolute;
+	background: #cccad1;
+	width: 3%;
+	height: 1.4%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: 4%;
+	left: 29%;
+}
+
+
+.ring1 {
+	position: absolute;
+	background-image: linear-gradient(#aeb8ba, #ced9db, #aeb8ba);
+	width: 1%;
+	height: 12%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: -4%;
+	left: 5%;
+}
+
+.ring2 {
+	position: absolute;
+	background-image: linear-gradient(#aeb8ba, #ced9db, #aeb8ba);
+	width: 1%;
+	height: 12%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: -4%;
+	left: 7%;
+}
+
+.ring3 {
+	position: absolute;
+	background-image: linear-gradient(#c4cfd1, #aeb8ba);
+	width: 1%;
+	height: 12%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: -4%;
+	left: 13%;
+}
+
+.ring4 {
+	position: absolute;
+	background-image: linear-gradient(#aeb8ba, #ced9db, #aeb8ba);
+	width: 1%;
+	height: 12%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: -4%;
+	left: 15%;
+}
+
+.ring5 {
+	position: absolute;
+	background-image: linear-gradient(#aeb8ba, #ced9db, #aeb8ba);
+	width: 1%;
+	height: 12%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: -4%;
+	left: 21%;
+}
+
+.ring6 {
+	position: absolute;
+	background-image: linear-gradient(#aeb8ba, #ced9db, #aeb8ba);
+	width: 1%;
+	height: 12%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: -4%;
+	left: 23%;
+}
+
+.ring7 {
+	position: absolute;
+	background-image: linear-gradient(#aeb8ba, #ced9db, #aeb8ba);
+	width: 1%;
+	height: 12%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: -4%;
+	left: 29%;
+}
+
+.ring8 {
+	position: absolute;
+	background-image: linear-gradient(#aeb8ba, #ced9db, #aeb8ba);
+	width: 1%;
+	height: 12%;
+  margin: 100px auto;
+  margin-left: 250px;
+	top: -4%;
+	left: 31%;
+}
