--- a/project2/level1/style.css
+++ b/project2/level1/style.css
@@ -3,35 +3,111 @@ body {
    
   }
 
+  .upper {
+      text-align: center;
+
+  }
+
+
+  .header {
+
+    display: inline-block;
+    padding-right: 40px;
+    padding-left: 40px;
+    padding-bottom:  100px;
+    padding-top:10px;
+    width: 300px;
+    height: 100px;
+    background: black;
+    color: white;
+    font-family: filicudi-solid, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+.home { 
+    color: white;
+    font-family: filicudi-solid, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    }
+
+
+
+
+a:link {
+    color: green;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  
+  a:active {
+    color: yellow;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+
+.left {
+  
+    float:left;
+}
+   
+.right {
+    float:right;
+    display:-ms-inline-flexbox;
+   
+}
+
+
+
 
 
 .restrict{
 
-    width: 500px;
-    height: 500px;
-    margin: 100px auto;
+    height: fit-content;
     background: white;
-    position: relative;
     border: red;
     border-radius: 3px;
 border-style: groove;
-padding: 16px;
-padding-bottom: 50px;
+padding: 19px;
+margin-top: 60px;
+margin-right: 60px;
+margin-left: 60px;
+
 }
+
+
 .levelnumb {
-    font-family: sarina, sans-serif;
+font-family: sarina, sans-serif;
 font-weight: 400;
 font-style: normal;
 font-size: 30px;
+
 }
 
-.Title {
+.title {
     font-family: minion-3, serif;
     font-weight: 700;
     font-style: normal;
     font-size: 20px;
-
+    margin-right: auto;
+    margin-left: 30px ;
+  
 }
+
+
 
 li {
     font-family: minion-3, serif;
@@ -39,7 +115,10 @@ li {
     font-style: normal;
     font-size:17px;
     text-overflow: ellipsis;
-    max-width:500px;
+    margin-right: auto;
+   
+    text-indent: -24px; 
+    margin-left: 24px;
 
 }
 
@@ -47,13 +126,8 @@ li {
     font-family: minion-3, serif;
     font-weight: 400;
     font-style: normal;
-    font-size:17px;
-
-}
-
-.right {
+    font-size: 17px;
+    margin-right: auto;
+    margin-left: auto;
     
-    position: absolute;
-    top: -3px;
-    right: -5px;
 }
