--- a/project2/level3/ZEBRA011/style.css
+++ b/project2/level3/ZEBRA011/style.css
@@ -1,8 +1,71 @@
 
+  .upper {
+    text-align: center;
 
-
-.inl1{
-    display: inline-block;
-    width: 1000px; 
-    height: 1000px;
 }
+
+
+.header {
+
+  display: inline-block;
+  padding-right: 40px;
+  padding-left: 40px;
+  padding-bottom:  30px;
+  padding-top:10px;
+  width: 600px;
+  height: 20px;
+  background: black;
+  margin-bottom:  20px;
+  color:white;
+  font-family: flegrei, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 25px;
+
+}
+.header1{
+    text-align: 
+    right;
+font-size:20px;
+}
+
+
+a:link {
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  
+  a:active {
+    color: yellow;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+
+
+
+
+
+.left {
+
+  float:left;
+}
+ 
+.right {
+  float:right;
+  display:-ms-inline-flexbox;
+ 
+}
+
