oohhhokayyyyy der we go

--- a/project2/style.css
+++ b/project2/style.css
@@ -13,7 +13,7 @@
     display: inline-block;
   }
   
-  /* Dropdown Content (Hidden by Default) */
+  /* Dropdown Content */
   .dropdown-content {
     display: none;
     position: absolute;
