--- a/project2/level1/style.css
+++ b/project2/level1/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmBWBEsxMU6DGooaygOVd9Y2HV_OaxXtwqJg&usqp=CAU");
+    background-image: url("https://t3.ftcdn.net/jpg/01/44/39/46/240_F_144394638_hBhlF3j2AS5JBvNxKdnyrbJPGfKUKONs.jpg");
    
   }
 
@@ -84,7 +84,7 @@ body {
      
     .right {
       float:right;
-      display:-ms-inline-flexbox;
+      
      
     }
     
