--- a/project2/level2/style.css
+++ b/project2/level2/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmBWBEsxMU6DGooaygOVd9Y2HV_OaxXtwqJg&usqp=CAU");
+    background-image: url("https://t3.ftcdn.net/jpg/01/44/39/46/240_F_144394638_hBhlF3j2AS5JBvNxKdnyrbJPGfKUKONs.jpg");
    
   }
 
@@ -41,11 +41,12 @@ body {
     font-style: normal;
     font-size: 25px;
     
+    
     }
     .header1{
-        text-align: 
-        right;
-    font-size:20px;
+        margin-right: auto;
+        margin-left: auto;
+    
     }
     
     
@@ -84,7 +85,7 @@ body {
      
     .right {
       float:right;
-      display:-ms-inline-flexbox;
+  
      
     }
     
