--- a/exercise5/style.css
+++ b/exercise5/style.css
@@ -15,11 +15,8 @@
     position: relative;
     z-index: 0;
   }
-    
-  
  
-  
-  .pad {
+  ///
       position: absolute;
       background: white;
       width: 40%;
