--- a/project2/style.css
+++ b/project2/style.css
@@ -1,41 +1,17 @@
-/* Dropdown Button */
-.dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+body {
+  background-image: url("https://t3.ftcdn.net/jpg/01/44/39/46/240_F_144394638_hBhlF3j2AS5JBvNxKdnyrbJPGfKUKONs.jpg");
+
+}
+
+
+.l1 {
+    
+  display: inline-block;
+  padding-right: 40px;
+  padding-left: 40px;
+  padding-bottom:  30px;
+  padding-top:10px;
+  width: 700px;
+  height: 20px;
+  background: black; 
+}
