--- a/project2/level2/ZEBRA010/STYLE.CSS
+++ b/project2/level2/ZEBRA010/STYLE.CSS
@@ -23,32 +23,29 @@ font-style: normal;
 font-size: 25px;
 
 }
-.header1{
-    text-align: 
-    right;
-font-size:20px;
-}
 
 
-a:link {
+
+
+.header1:link {
     color: pink;
     background-color: transparent;
     text-decoration: none;
   }
   
-  a:visited {
+  .header1:visited {
     color: pink;
     background-color: transparent;
     text-decoration: none;
   }
   
-  a:hover {
+  .header1:hover {
     color: red;
     background-color: transparent;
     text-decoration: underline;
   }
   
-  a:active {
+  .header1:active {
     color: yellow;
     background-color: transparent;
     text-decoration: underline;
