--- a/project2/style.css
+++ b/project2/style.css
@@ -1,17 +1,32 @@
 body {
   background-image: url("https://t3.ftcdn.net/jpg/01/44/39/46/240_F_144394638_hBhlF3j2AS5JBvNxKdnyrbJPGfKUKONs.jpg");
 
+}    .upper {
+  text-align: center;
+
 }
 
 
-.l1 {
+.header {
     
   display: inline-block;
   padding-right: 40px;
   padding-left: 40px;
   padding-bottom:  30px;
   padding-top:10px;
-  width: 700px;
+  width: 600px;
   height: 20px;
-  background: black; 
+  background: black;
+  margin-bottom:  20px;
+  color:white;
+  font-family: flegrei, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 25px;
+
+}
+.header1{
+    text-align: 
+    right;
+font-size:20px;
 }
